--- a/ECS.Test/ECS.Test.csproj
+++ b/ECS.Test/ECS.Test.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECS.Redesign\ECS.Redesign.csproj" />
+  </ItemGroup>
+
 </Project>
